_sass/timeline.scss
@include media-breakpoint-down(sm) {
  .about {
    > .container > div:first-child {
      display: block;
    }
  }
}

.timeline {
  overflow: hidden;
  padding-top: 0.2rem;

  a:hover {
    color: $cream;
  }

  .bubble {
    width: 9px;
    height: 9px;
    background: $brand-primary-color;
    border-radius: 5px;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    display: inline-block;
    position: relative;
    bottom: 3px;
    box-shadow: 0px 0px 0px 1px $brand-primary-color,
                0px 0px 0px 3px $brand-accent-color,
                0px 0px 0px 10px $brand-primary-color;
    z-index: 1;

    &.left {
      right: 15px;
    }

    &.right {
      right: 15px;

      @include media-breakpoint-up(sm) {
        left: calc(100% + 5px);
      };
    }

    &.center {
      float: left;
      right: 10px;
      margin-top: 14px;

      @include media-breakpoint-up(sm) {
        float: none;
        right: 3px;
      };
    }
  }

  .panel {
    margin-top: -1.5rem;
    margin-bottom: 3rem;
    position: relative;

    &.right {
      float: left;
      text-align: left;
      margin-left: 15px;
    }

    &.left {
      float: right;
      text-align: left;
      margin-left: 15px;
      margin-right: 0px;

      @include media-breakpoint-up(sm) {
        text-align: right;
        margin-right: 15px;
        margin-left: 0px;
      };
    }

    p {
      color: $cream;
    }
  }

  &:after {
    position: absolute;
    top: 0;
    bottom: 0;
    content: "";
    width: 1px;
    background-color: $cream;
    left: 0%;
    margin-left: 9px;

    @include media-breakpoint-up(sm) {
      left: 50%;
      margin-left: -1px;
    };
  }
}

.timeline.dob {
  text-align: left;
  overflow: visible !important;

  @include media-breakpoint-up(sm) {
    text-align: center;
  };

  .h4 {
    margin-left: 15px;

    @include media-breakpoint-up(sm) {
      margin-left: 0;
    };
  }
}

